[package]
name = "freerdp-server-shadow-subsystem-rs"
links = "freerdp-server-shadow-subsystem3"
build = "src/build.rs"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
bindgen = "0.53.1"
walkdir = "*"
